--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "native"
   ],
   "author": "Amogh Banta",
-  "license": "GPL",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/react-everywhere/re-start"
   },
